--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "server" : "webpack-dev-server --content-base build -ebug --output-pathinfo --colors --devtool source-map --port 5000"
   },
   "browser" : {
-    "angularjs" : "bower_components/angular/angular.js"
+    "angularjs" : "bower_components/angular/angular.js",
+    "angular-ui": "/bower_components/angular-ui-router/release/angular-ui-router.min.js"
   }
 }
